--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         }
     },
     "require": {
-        "statamic/cms": "^3.4 || ^4.0"
+        "statamic/cms": "^4.0"
     },
     "config": {
         "allow-plugins": {
