--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "type": "statamic-addon",
     "autoload": {
         "psr-4": {
-            "VV\\StatamicGlossaryTooltips\\": "src"
+            "VV\\GlossaryTooltips\\": "src"
         }
     },
     "authors": [
@@ -31,7 +31,7 @@
         },
         "laravel": {
             "providers": [
-                "VV\\StatamicGlossaryTooltips\\ServiceProvider"
+                "VV\\GlossaryTooltips\\ServiceProvider"
             ]
         }
     },
